bk_ida/gccida/c1/simplify_if_then_else
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5105:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v1; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5114:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v10; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5115:4: error: expected ';' after expression
rtx result; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5115:5: error: use of undeclared identifier 'result'
rtx result; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5116:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v12; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5123:4: error: expected ';' after expression
rtx v19; // rdx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5123:5: error: use of undeclared identifier 'v19'
rtx v19; // rdx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5149:4: error: expected ';' after expression
rtx compound_operation; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5149:5: error: use of undeclared identifier 'compound_operation'; did you mean 'make_compound_operation'?
rtx compound_operation; // rbp 
    ^~~~~~~~~~~~~~~~~~
    make_compound_operation
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:367:12: note: 'make_compound_operation' declared here
static rtx make_compound_operation  PARAMS ((rtx, enum rtx_code));
           ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5160:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v56; // r12d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5161:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v57; // r13d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5194:6: error: use of undeclared identifier 'y'
rtx *y; // [rsp+8h] [rbp-80h] 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5195:4: error: expected ';' after expression
rtx ya; // [rsp+8h] [rbp-80h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5195:5: error: use of undeclared identifier 'ya'
rtx ya; // [rsp+8h] [rbp-80h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5196:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v92; // [rsp+10h] [rbp-78h] 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5201:4: error: expected ';' after expression
rtx ina; // [rsp+20h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5201:5: error: use of undeclared identifier 'ina'; did you mean 'in'?
rtx ina; // [rsp+20h] [rbp-68h] 
    ^~~
    in
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5200:18: note: 'in' declared here
 struct rtx_def *in; // [rsp+20h] [rbp-68h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5202:4: error: expected ';' after expression
rtx inb; // [rsp+20h] [rbp-68h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5202:5: error: use of undeclared identifier 'inb'; did you mean 'in'?
rtx inb; // [rsp+20h] [rbp-68h] 
    ^~~
    in
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/combine.c:5200:18: note: 'in' declared here
 struct rtx_def *in; // [rsp+20h] [rbp-68h] 
                 ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/simplify_if_then_else/src/obj/combine.o] Error 1
